<resources>
    <string name="app_name">Admin</string>
    <string name="plz_wait">Please wait.</string>
    <string name="sme_wrg">Something went wrong</string>
    <string name="enter_barcode">Enter barcode</string>
    <string name="upload">Upload</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="image_uploded_succesfully">Image uploaded successfully</string>
    <string name="plz_choos_item">Please choose an item</string>
    <string name="plz_sel_pic">Please select a picture</string>
    <string name="delete">Delete</string>
    <string name="enter_itemname">Enter itemname</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="display_name">Display name</string>
    <string name="plz_give_disp_name">Please give display name</string>
    <string name="change_disp_name">Change display name</string>
    <string name="you_r_not_selected_any">You are not selected anything</string>
    <string name="the_item_already_first">This item is already in first position</string>
    <string name="the_item_already_last">This item is already in last position</string>
    <string name="category">Category</string>
    <string name="display_name_new">New display name</string>
    <string name="plz_enter_new_display_name">Please enter new display name</string>
    <string name="sub_group">Sub group</string>
    <string name="item">Item</string>
    <string name="type">Type</string>
    <string name="group">Group</string>
    <string name="stkid">Stock id</string>
    <string name="search_item">Search item</string>
    <string name="search">Search</string>
    <string name="plz_enter_itemname">Please enter itemname</string>
    <string name="plz_sel_main_category">Please select main category</string>
    <string name="search_itemname_or_barcode">Search itemname or barcode</string>
    <string name="plz_sel_dash_cat">Please select dashboard category</string>
    <string name="clothes">Clothes</string>
    <string name="view_all">View all</string>
    <string name="select">Select</string>
    <string name="search_by">Search by</string>
    <string name="barcode">Barcode</string>
    <string name="itemname">Itemname</string>
    <string name="product">Product</string>
    <string name="type_here">Type here</string>
    <string name="plz_sel_itemname_or_bar">Please select itemname or barcode</string>
    <string name="group_price_offer">Group (Price Less than)</string>
    <string name="sub_category1">Sub Category1</string>
    <string name="sub_category2">Sub Category2</string>
    <string name="company">Company</string>
    <string name="brand">Brand</string>
    <string name="pattern">Pattern</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="error">Error</string>
    <string name="remove_item">Remove item</string>
    <string name="are_you_sure_remove">Are you sure you want to remove this item?</string>
    <string name="choose_banner">Choose banner type</string>
    <string name="banner1">Banner1</string>
    <string name="banner2">Banner2</string>
    <string name="count">Enter the no. of items need to display</string>
    <string name="plz_enter_count">Please enter the count</string>
    <string name="plz_enter_count_greater">Please enter thecount greater than 0</string>
    <string name="enter_stockid">Enter Stock id</string>
</resources>