<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RadioGroup

    android:id="@+id/radiogroup"
    android:layout_width="match_parent"
    android:layout_height="0dip"
android:layout_weight=".1"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/search_by" />

    <RadioButton
        android:id="@+id/radio_btn_itemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/itemname" />

    <RadioButton
        android:id="@+id/radio_btn_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/stkid" />


</RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:weightSum="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtser"
            android:layout_width="0dip"
            android:layout_weight=".7"
            android:layout_height="match_parent"
            android:hint="@string/type_here"/>

        <Button
            android:id="@+id/btnser"
            android:layout_width="0dip"
            android:layout_weight=".3"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/search"/>



    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recv"
        android:layout_width="match_parent"
        android:layout_height="0dip"

        android:layout_weight=".8" />



</LinearLayout>