<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_ash"
    android:layout_margin="10dp"

    android:weightSum="1">


    <RadioGroup

        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/type" />

        <RadioButton
            android:id="@+id/radio_btn_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/group" />





        <RadioButton
            android:id="@+id/radio_btn_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/product" />


    </RadioGroup>











</LinearLayout>
</androidx.cardview.widget.CardView>