<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_ash"
    android:layout_margin="10dp"

    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".25"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:layout_width="0dip"
            android:layout_weight=".4"
            android:layout_height="match_parent"
            android:text="@string/category"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/txt_category"
            android:layout_width="0dip"
            android:layout_weight=".6"
            android:layout_height="match_parent"
android:visibility="gone"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".25"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_weight=".4"
            android:layout_height="match_parent"
            android:text="@string/display_name"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/txt_display"
            android:layout_width="0dip"
            android:layout_weight=".6"
            android:layout_height="match_parent"

            android:fontFamily="@font/montserrat"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".25"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_weight=".4"
            android:layout_height="match_parent"
            android:text="@string/display_name_new"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/edit_display_new"
            android:layout_width="0dip"
            android:layout_weight=".6"
            android:layout_height="match_parent"


            android:fontFamily="@font/montserrat"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".25"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>








</LinearLayout>
</androidx.cardview.widget.CardView>